Update manifest.json with new application name and description

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name":"Live IPL Score",
+    "name":"Live IPL Status",
     "version":"1.0.0",
-    "description":"This is a live IPL score application",
+    "description":"This is a live IPL status application",
     "manifest_version":3,
     "action":{
         "default_popup":"popup.html",
-        "default_title":"Live IPL Score",
+        "default_title":"Live IPL Status",
         "default_icon":"logo.png"
     }
 }
